<?xml version="1.0"?>
<package format="2">
  <name>rosbase</name>
  <version>0.1.0</version>
  <description>The rosbase package</description>

  <maintainer email="jazib980@gmail.com">Jazib Dawre</maintainer>

  <license>GPLv3</license>

  <url type="repository">https://github.com/jazibdawre/rosbase</url>
  <url type="bugtracker">https://github.com/jazibdawre/rosbase/issues</url>

  <author email="jazib980@gmail.com">Jazib Dawre</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>raspicam_node</exec_depend>
  <exec_depend>rosserial_arduino</exec_depend>
  <exec_depend>rosserial_client</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
